--- a/app/index.css
+++ b/app/index.css
@@ -621,6 +621,14 @@ video {
   margin-top: 1rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -860,6 +868,10 @@ video {
   gap: 2rem;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1060,6 +1072,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-slate-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
@@ -1108,8 +1125,20 @@ video {
   fill: #f8fafc;
 }
 
+.fill-none {
+  fill: none;
+}
+
+.fill-sky-50 {
+  fill: #f0f9ff;
+}
+
 .stroke-blue-800 {
   stroke: #1e40af;
+}
+
+.stroke-sky-50 {
+  stroke: #f0f9ff;
 }
 
 .p-1 {
@@ -1544,6 +1573,16 @@ video {
     border-color: rgb(51 65 85 / var(--tw-border-opacity));
   }
 
+  .dark\:border-sky-400 {
+    --tw-border-opacity: 1;
+    border-color: rgb(56 189 248 / var(--tw-border-opacity));
+  }
+
+  .dark\:border-sky-500 {
+    --tw-border-opacity: 1;
+    border-color: rgb(14 165 233 / var(--tw-border-opacity));
+  }
+
   .dark\:bg-sky-700 {
     --tw-bg-opacity: 1;
     background-color: rgb(3 105 161 / var(--tw-bg-opacity));
@@ -1552,6 +1591,16 @@ video {
   .dark\:bg-slate-700 {
     --tw-bg-opacity: 1;
     background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+  }
+
+  .dark\:bg-sky-400 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(56 189 248 / var(--tw-bg-opacity));
+  }
+
+  .dark\:bg-sky-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(14 165 233 / var(--tw-bg-opacity));
   }
 
   .dark\:text-sky-100 {
@@ -1572,6 +1621,11 @@ video {
   .dark\:focus\:bg-slate-700:focus {
     --tw-bg-opacity: 1;
     background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+  }
+
+  .dark\:focus\:bg-sky-400:focus {
+    --tw-bg-opacity: 1;
+    background-color: rgb(56 189 248 / var(--tw-bg-opacity));
   }
 
   .dark\:focus\:ring-slate-400:focus {
@@ -1636,6 +1690,31 @@ video {
   .xl\:gap-16 {
     gap: 4rem;
   }
+}
+
+.\[\&\>\*input\]\:rounded>*input {
+  border-radius: 0.25rem;
+}
+
+.\[\&\>\*input\]\:px-2>*input {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.\[\&\>\*input\]\:py-1>*input {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.\[\&\>\*input\]\:text-sky-950>*input {
+  --tw-text-opacity: 1;
+  color: rgb(8 47 73 / var(--tw-text-opacity));
+}
+
+.\[\&\>\*input\]\:shadow>*input {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .\[\&\>input\]\:rounded>input {
